[package]
name = "server"
version = "0.1.0"
authors = ["Neil LoBracco <neil.lobracco@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3.3", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4.6", features = ["serde"] }
reqwest = "0.9.5"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "rebuild_all_entries"
path = "src/rebuild_all_entries.rs"
